le agregue una imagen video y audio

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Informacion</title>
 </head>
 <body>
-    <h1>Hola mundo como estas?</h1>
+    <h1>Atardeceres</h1>
+    <figure> 
+        <img src="atardecer.jpg" alt="Atardecer en La Plata,Argentina">
+        <figcaption>Atardecer en la Plata</figcaption>
+    </figure>
+    <iframe width="300" height="315" src="https://www.youtube.com/embed/jHlu53fyiTs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <Audio src="arboles sonido.mp3" type="audio/mp3" controls="controls">
+    </Audio>
 </body>
 </html>
