--- a/pruebaGit.html
+++ b/pruebaGit.html
@@ -1,5 +1,20 @@
-<html>
-<div>
-<p>hola com estas?</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>gitprueba</title>
+    <link rel="stylesheet" href="pruebaGit.css">
+</head>
+<body>
+    <div>
+        <p>
+            -hola como estas?
+        </p>
+        <p>
+            -yo bien!
+        </p>
+    </div>
+    
+</body>
 </html>
