agregué mas texto

--- a/pruebaGit.html
+++ b/pruebaGit.html
@@ -14,6 +14,7 @@
         <p>
             -yo bien!
         </p>
+        <p>-Recuerda llevar el trabajo terminado para mañana porque hay que entregarlo y es la mitad de la nota final</p>
     </div>
     
 </body>
